# codegen-bridge

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Justfile  README.md  conftest.py  gemini-extension.json  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json  settings.json
.claude-plugin/hooks/: hooks.json
.claude/rules/: architecture.md  environment.md  patterns.md  plugin.md  testing.md  tools.md
.codex/: INSTALL.md
.cursor-plugin/: plugin.json
.github/workflows/: ci.yml
.opencode/: INSTALL.md
agents/: codegen-delegator.md  pr-reviewer.md
bridge/: _pythonpath.py  annotations.py  client.py  context.py  dependencies.py  elicitation.py  icons.py  log_parser.py  models.py  monitoring.py  openapi_spec.json  openapi_utils.py  prompt_builder.py  rate_budget.py  server.py  settings.py  status.py  storage.py  types.py
bridge/helpers/: __init__.py  formatting.py  pagination.py  repo_detection.py
bridge/middleware/: __init__.py  authorization.py  config.py  stack.py
bridge/prompts/: __init__.py  dynamic.py  templates.py
bridge/providers/: __init__.py  agents.py  commands.py  registry.py  remote.py
bridge/resources/: __init__.py  config.py  dynamic.py  platform.py  templates.py
bridge/sampling/: __init__.py  config.py  prompts.py  schemas.py  service.py  tools.py
bridge/services/: __init__.py  execution.py  runs.py
bridge/telemetry/: __init__.py  config.py  helpers.py  middleware.py
bridge/tools/: __init__.py  agent.py  analytics.py  execution.py  integrations.py  pr.py  session.py  settings.py  setup.py
bridge/transforms/: __init__.py  config.py  registry.py
commands/: cg-logs.md  cg-merge.md  cg-settings.md  cg-status.md  codegen.md
docs/: README.codex.md  README.cursor.md  README.gemini.md  README.opencode.md  mcp-surface-inventory.md  v05-architecture-plan.md
docs/plans/: 2026-02-22-full-redesign.md  2026-03-20-refactoring-plan.md  2026-03-20-superpowers-integration.md  continue-session-prompt.md
docs/v050/: mcp-surface-inventory.md
hooks/: hooks.json  run-hook.cmd  session-start
hooks/scripts/: post-get-run.sh  session-start.sh
scripts/: openapi_sync.py
skills/agent-monitoring/: SKILL.md
skills/bulk-delegation/: SKILL.md
skills/codegen-delegation/: SKILL.md
skills/debugging-failed-runs/: SKILL.md
skills/executing-via-codegen/: SKILL.md
skills/pr-management/: SKILL.md
skills/prompt-crafting/: SKILL.md
tests/: conftest.py  test_annotations.py  test_client.py  test_context.py  test_dependencies.py  test_elicitation.py  test_elicitation_schemas.py  test_exception_handling.py  test_hooks.py  test_icons.py  test_integration_all_tools.py  test_log_parser.py  test_mcp_integration.py  test_models.py  test_monitoring.py  test_openapi_utils.py  test_prompt_builder.py  test_pythonpath.py  test_rate_budget.py  test_server.py  test_settings.py  test_status.py  test_storage.py  test_storage_ttl.py
wiki/: Agents.md  Architecture.md  Changelog.md  Commands-Reference.md  Configuration.md  Development-Guide.md  Getting-Started.md  Home.md  Middleware-and-Transforms.md  Providers.md  Skills-Guide.md  Tools-Reference.md  _Footer.md  _Sidebar.md
(+77 files in other folders)
