[project]
name = "codegen-bridge"
version = "0.1.0"
description = "MCP server for Codegen AI agent platform"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
telemetry = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.15.2",
    "opentelemetry-sdk>=1.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# B008: Depends() / CurrentContext() in default args is the standard FastMCP DI pattern
"bridge/dependencies.py" = ["B008"]
"bridge/tools/*.py" = ["B008"]
"bridge/resources/*.py" = ["B008"]
"bridge/sampling/tools.py" = ["B008"]
